# langgraph-agent-clean-architecture

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.cursor/: hooks.json
.cursor/hooks/: before_git_commit_sync.py  session_install.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
alembic/: env.py
alembic/versions/: 31121b69cc8e_initial_schema.py
app/: main.py
app/api/: dependencies.py  exception_handlers.py
app/api/v1/routers/: auth_router.py  chat_router.py  health_router.py  (+3 more)
app/core/: exceptions.py
app/core/config/: di_container.py  gunicorn_configs.py  mcp_servers.py  prompt_registry.toml  settings.py
app/core/observability/: __init__.py  request_context.py
app/core/security/: jwt_service.py  rate_limiter.py
app/infrastructure/cache/: redis_manager.py
app/infrastructure/llm_gateways/: anthropic_service.py  google_service.py  groq_service.py  openai_service.py  structured_output.py
app/infrastructure/mcp_gateways/: __init__.py  client_factory.py  path_interceptor.py
app/shared/: uuid_utils.py
app/shared/domain_models/: base_model.py  session.py  user.py
app/shared/ports/: base_repository.py  unit_of_work.py
custom_hooks/: generate_requirements.py  sync_requirements.py
docs/: README.md  agent-orchestration.md  api-reference.md  architecture.md  configuration.md  data-model.md  deployment.md  getting-started.md  onboarding.md  request-flow.md  testing.md  tools.md
docs/architecture/: mcp_integration.md
hooks/: __init__.py  before_git_commit_sync.py  generate_requirements.py  pre-commit  session_install.py  shared.py
scripts/: dev.ps1  dev.sh  sync_deps.ps1  sync_deps.sh
tests/: conftest.py
tests/e2e/: test_chat_e2e.py
tests/integration/: test_auth_flow.py  test_health.py
tests/unit/: test_domain_models.py  test_exceptions.py  test_file_prompt_registry.py  test_internal_summary_filtering.py  test_jwt_service.py  test_mcp_bootstrap.py  test_mcp_path_normalize.py  test_memory_policy.py  test_message_snippets.py  test_routing_rules.py  test_schema_compact.py  test_tool_execution_policy.py  test_tool_partition.py
workers/: agent_tasks.py  celery_app.py
(+83 files in other folders)
