[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langgraph-agent-clean-architecture"
version = "0.1.0"
description = "Clean Architecture foundation for LangGraph AI agent systems."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  # --- LangGraph / LangChain ---
  "langgraph>=0.2.36",
  "langchain-core>=0.3.13",
  "langchain-openai>=0.2.5",
  "langchain-anthropic>=0.3.0",
  "langchain-google-genai>=2.0.0",
  "langchain-groq>=0.2.0",
  "langgraph-checkpoint-postgres>=2.0.0",

  # --- Web Framework ---
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.31.0",

  # --- Database ---
  "sqlalchemy[asyncio]>=2.0.35",
  "asyncpg>=0.30.0",
  "psycopg2-binary>=2.9.9",
  "alembic>=1.13.3",

  # --- Auth & Security ---
  "pyjwt[crypto]>=2.9.0",
  "passlib[bcrypt]>=1.7.4",
  "slowapi>=0.1.9",

  # --- Validation & Settings ---
  "pydantic>=2.9.2",
  "pydantic-settings>=2.5.2",
  "python-dotenv>=1.0.1",

  # --- Cache & Messaging ---
  "redis>=5.1.0",

  # --- Background Workers ---
  "celery[redis]>=5.4.0",

  # --- Observability ---
  "opentelemetry-api>=1.27.0",
  "opentelemetry-sdk>=1.27.0",
  "opentelemetry-instrumentation-fastapi>=0.48b0",

  # --- HTTP ---
  "httpx>=0.27.2",

  # --- MCP (Model Context Protocol) ---
  "langchain-mcp-adapters>=0.1.0",

  # --- Validation extras ---
  "email-validator>=2.1.0",

  # --- Research Tools ---
  "geopy>=2.4.1",
  "timezonefinder>=6.5.0",
  "tavily-python>=0.5.0",
  "langchain-postgres>=0.0.12",
  "pgvector>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9",
  "mypy>=1.11.2",
  "factory-boy>=3.3.1",
  "aiosqlite>=0.20.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["app*", "workers*", "hooks*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "RUF"]
extend-ignore = ["B008"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
